Fixed: Scrollbar bounce on IE7 when opening the Post Options menu Changed: Made the Post Options menu resemble the rest of Beehive rather than just be white with black borders.

--- a/forum/styles/blue/style.css
+++ b/forum/styles/blue/style.css
@@ -1153,6 +1153,7 @@ a {
     padding: 0px 10px 0px 10px;
     overflow: auto;
 }
+
 .post_options {
     cursor: pointer;
 }
@@ -1160,9 +1161,6 @@ a {
 .post_options_container_closed {
     position: absolute;
     text-align: left;
-    padding: 5px;
-    background-color: #FFFFFF;
-    border: 1px solid #000000;
     display: none;
     overflow: scroll;
 }
@@ -1170,9 +1168,10 @@ a {
 .post_options_container_opened {
     position: absolute;
     text-align: left;
-    padding: 5px;
-    background-color: #FFFFFF;
-    border: 1px solid #000000;
     display: block;
     overflow: scroll;
+}
+
+.post_options_menu {
+   padding: 5px 10px 10px 5px;
 }
