--- a/forum/styles/tehforum/style.css
+++ b/forum/styles/tehforum/style.css
@@ -1163,9 +1163,6 @@ a {
 .post_options_container_closed {
     position: absolute;
     text-align: left;
-    padding: 5px;
-    background-color: #FFFFFF;
-    border: 1px solid #000000;
     display: none;
     overflow: scroll;
 }
@@ -1173,9 +1170,10 @@ a {
 .post_options_container_opened {
     position: absolute;
     text-align: left;
-    padding: 5px;
-    background-color: #FFFFFF;
-    border: 1px solid #000000;
     display: block;
     overflow: scroll;
+}
+
+.post_options_menu {
+   padding: 5px 10px 10px 5px;
 }
